PMG-221 UI - Edit Process Issues Fix action params spacing

--- a/console/src/app/maps/map-detail/map-edit/map-design/process-form/process-form.component.scss
+++ b/console/src/app/maps/map-detail/map-edit/map-design/process-form/process-form.component.scss
@@ -31,7 +31,11 @@ div {
 .process-form {
   margin-bottom: 55px;
   .action-form {
+    font-size: 13px;
     padding-right: 10px;
     padding-left: 10px;
+    .action-params {
+      margin-bottom: 5px;
+    }
   }
 }
